--- a/commands.html
+++ b/commands.html
@@ -118,8 +118,8 @@
                         <a class="navbar-item" href="https://discordbotlist.com/bots/popcord" target="_blank">
                             discordbotlist
                         </a>
-                        <a class="navbar-item" href="put the link here" target="_blank">
-                            comming soon
+                        <a class="navbar-item" href="https://wonderbotlist.com/fr/bot/994970912271122452/vote" target="_blank">
+                            wonderbotlist
                         </a>
                         <a class="navbar-item" href="put the link here" target="_blank">
                             comming soon
