--- a/commands.html
+++ b/commands.html
@@ -115,7 +115,7 @@
                         <a class="navbar-item" href="https://top.gg/bot/994970912271122452" target="_blank">
                             Top.gg
                         </a>
-                        <a class="navbar-item" href="https://discordbotlist.com/bots/popcord" target="_blank">
+                        <a class="navbar-item" href="https://discordbotlist.com/bots/popcord/upvote" target="_blank">
                             discordbotlist
                         </a>
                         <a class="navbar-item" href="https://wonderbotlist.com/fr/bot/994970912271122452/vote" target="_blank">
