--- a/privacy.html
+++ b/privacy.html
@@ -100,10 +100,10 @@
                     </a>
                     <!--Dropdown menu for vote-->
                     <div class="navbar-dropdown">
-                        <a class="navbar-item" href="https://top.gg/bot/994970912271122452" target="_blank">
+                        <a class="navbar-item" href="https://top.gg/bot/994970912271122452/vote" target="_blank">
                             Top.gg
                         </a>
-                        <a class="navbar-item" href="https://discordbotlist.com/bots/popcord" target="_blank">
+                        <a class="navbar-item" href="https://discordbotlist.com/bots/popcord/upvote" target="_blank">
                             discordbotlist
                         </a>
                         <a class="navbar-item" href="https://wonderbotlist.com/fr/bot/994970912271122452/vote" target="_blank">
