--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             </a>
             <p class="navbar-item"><a id="colormode" style="color:rgb(189, 195, 80)" class="fa-solid fa-sun"> light</a>
             </p>
+            <p class="navbar-item"><a style="color:rgb(189, 195, 80)" class="fa-solid fa-square-terminal"> API</a>
+            </p>
             <a role="button" class="navbar-burger" data-target="navbarBasicExample" aria-label="menu"
                 aria-expanded="false">
                 <span aria-hidden="true"></span>
