--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./script/style.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./script/style.js"></script>
     <link rel="canonical" href="https://popcord.github.io/" />
@@ -76,7 +76,7 @@
             </a>
             <p class="navbar-item"><a id="colormode" style="color:rgb(189, 195, 80)" class="fa-solid fa-sun"> light</a>
             </p>
-            <p class="navbar-item"><a style="color:rgb(189, 195, 80)" class="fa-solid fa-square-terminal"> API</a>
+            <p class="navbar-item"><a style="color:white" class="fa-regular fa-square-terminal"> API</a>
             </p>
             <a role="button" class="navbar-burger" data-target="navbarBasicExample" aria-label="menu"
                 aria-expanded="false">
