--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </a>
             <p class="navbar-item"><a id="colormode" style="color:rgb(189, 195, 80)" class="fa-solid fa-sun"> light</a>
             </p>
-            <p class="navbar-item"><a style="color:white" class="fa-regular fa-square-terminal"> API</a>
+            <p class="navbar-item"><i style="color:white" class="fa-regular fa-square-terminal"> API</i>
             </p>
             <a role="button" class="navbar-burger" data-target="navbarBasicExample" aria-label="menu"
                 aria-expanded="false">
