--- a/commands.html
+++ b/commands.html
@@ -93,6 +93,8 @@
             </a>
             <p class="navbar-item"><a onclick="myFunction()" id="colormode" style="color:rgb(189, 195, 80)"
                     class="fa-solid fa-sun"> light</a></p>
+            <p style="background-color:black; border-radius:10%" class="navbar-item"><a href="https://api-popcord.vercel.app" style="color:white" class="fa-solid fa-code" target="_blank"> API</a>
+            </p>
             <a role="button" class="navbar-burger" data-target="navbarBasicExample" aria-label="menu"
                 aria-expanded="false">
                 <span aria-hidden="true"></span>
