--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="language" content="English">
     <title>PopCord - The Discord bot</title>
     <link rel="stylesheet" href="script/dark.css">
-    <link rel="icon" href="img/discord.png" type="image/x-icon">
+    <link rel="icon" href="https://zupimages.net/up/23/13/fddt.png" type="image/x-icon">
     <link rel="stylesheet" href="./script/style.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
     <meta name="twitter:url" content="https://popcord.github.io" />
     <meta name="twitter:description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server." />
-    <meta name="twitter:image" content="https://www.zupimages.net/up/21/52/enov.png" />
+    <meta name="twitter:image" content="https://zupimages.net/up/23/13/16vu.png" />
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
@@ -42,8 +42,8 @@
     <meta property="og:title" content="PopCord - The Discord bot">
     <meta property="og:description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
-    <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
-    <meta property="og:image:secure_url" content="https://www.zupimages.net/up/21/52/enov.png" />
+    <meta property="og:image" content="http://zupimages.net/up/23/13/16vu.png">
+    <meta property="og:image:secure_url" content="https://zupimages.net/up/23/13/16vu.png" />
 
     <meta property="og:keywords"
         content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
