--- a/commands.html
+++ b/commands.html
@@ -8,7 +8,7 @@
     <title>PopCord - Commands</title>
     <link rel="stylesheet" href="script/dark.css">
     <link rel="stylesheet" href="script/style.css">
-    <link rel="icon" href="img/discord.png" type="image/x-icon">
+    <link rel="icon" href="https://zupimages.net/up/23/13/fddt.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -28,7 +28,7 @@
     <meta name="twitter:site" content="@PopCordDiscord" />
     <meta name="twitter:url" content="https://popcord.github.io/commands" />
     <meta name="twitter:description" content="The Commands list of the Discord Bot" />
-    <meta name="twitter:image" content="https://www.zupimages.net/up/21/52/enov.png" />
+    <meta name="twitter:image" content="https://zupimages.net/up/23/13/16vu.png" />
 
 
 
@@ -39,8 +39,8 @@
     <meta property="og:site_name" content="PopCord">
     <meta property="og:title" content="PopCord - Commands">
     <meta property="og:description" content="The Commands list of the Discord Bot">
-    <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
-    <meta property="og:image:secure_url" content="https://www.zupimages.net/up/21/52/enov.png">
+    <meta property="og:image" content="http://zupimages.net/up/23/13/16vu.png">
+    <meta property="og:image:secure_url" content="https://zupimages.net/up/23/13/16vu.png">
 
     <meta name=apple-mobile-web-app-capable content=yes>
     <meta name=apple-mobile-web-app-status-bar-style content=black-translucent>
