--- a/discord.html
+++ b/discord.html
@@ -14,7 +14,7 @@
 
 
     <link rel="stylesheet" href="script/dark.css">
-    <link rel="icon" href="img/discord.png" type="image/x-icon">
+    <link rel="icon" href="https://zupimages.net/up/23/13/fddt.png" type="image/x-icon">
     <link rel="stylesheet" href="./script/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -32,7 +32,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@PopCordDiscord" />
     <meta name="twitter:url" content="https://popcord.github.io/discord" />
-    <meta name="twitter:image" content="https://www.zupimages.net/up/21/52/enov.png" />
+    <meta name="twitter:image" content="https://zupimages.net/up/23/13/16vu.png" />
     <meta name="twitter:description" content="chat on discord server via the website!">
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -42,8 +42,8 @@
     <meta property="og:site_name" content="popcord">
     <meta property="og:title" content="PopCord - ChatBox">
     <meta property="og:description" content="chat on discord server via the website!">
-    <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
-    <meta property="og:image:secure_url" content="https://www.zupimages.net/up/21/52/enov.png" />
+    <meta property="og:image" content="http://zupimages.net/up/23/13/fddt.png">
+    <meta property="og:image:secure_url" content="https://zupimages.net/up/23/13/16vu.png" />
 
     <meta property="og:keywords"
         content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
