--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
     <meta name="language" content="English">
     <title>PopCord - Privacy</title>
     <link rel="stylesheet" href="script/dark.css">
-    <link rel="icon" href="img/discord.png" type="image/x-icon">
+    <link rel="icon" href="https://zupimages.net/up/23/13/fddt.png" type="image/x-icon">
     <link rel="stylesheet" href="./script/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -27,7 +27,7 @@
     <meta name="twitter:site" content="@PopCordDiscord" />
     <meta name="twitter:url" content="https://popcord.github.io/privacy" />
     <meta name="twitter:description" content="The Privacy policy the Discord Bot" />
-    <meta name="twitter:image" content="https://www.zupimages.net/up/21/52/enov.png" />
+    <meta name="twitter:image" content="https://zupimages.net/up/23/13/16vu.png" />
 
 
 
@@ -38,8 +38,8 @@
     <meta property="og:site_name" content="PopCord">
     <meta property="og:title" content="PopCord - Privacy policy">
     <meta property="og:description" content="The Privacy policy of PopCord Bot">
-    <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
-    <meta property="og:image:secure_url" content="https://www.zupimages.net/up/21/52/enov.png">
+    <meta property="og:image" content="http://zupimages.net/up/23/13/16vu.png">
+    <meta property="og:image:secure_url" content="https://zupimages.net/up/23/13/16vu.png">
 
     <meta property="og:keywords"
         content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://site-fr.github.io/popcord/">
