--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item"
-                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join">
+                href="https://discord.com/oauth2/authorize?client_id=940974495609524314&permissions=8796093022207&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=applications.commands%20bot">
                 <img src="img/discord.png" width="30px" height="55px">
             </a>
             <p class="navbar-item"><a id="colormode" style="color:rgb(189, 195, 80)" class="fa-solid fa-sun"> light</a>
@@ -138,7 +138,7 @@
             <h6>Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.</h6>
         </div>
         <div class="button-section">
-            <a href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join"
+            <a href="https://discord.com/oauth2/authorize?client_id=940974495609524314&permissions=8796093022207&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=applications.commands%20bot"
                 target="_blank" class="button is-primary is-outlined is-large btn-hvr"><i
                     class="fab fa-fw fa-fw fa-discord"></i> Add Bot!</a>
         </div>
