--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <h1><b>What are you waiting for?</b></h1>
                 <p>take your chance for a better world!</p>
                 <a role="button"
-                    href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join"
+                    href="https://discord.com/oauth2/authorize?client_id=940974495609524314&permissions=8796093022207&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=applications.commands%20bot"
                     class="button button-custom is-secondary is-large"> Invite</a>
             </div>
         </div>
