--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <a class="navbar-item" href="https://wonderbotlist.com/fr/bot/994970912271122452/vote" target="_blank">
                             wonderbotlist
                         </a>
-                        <a class="navbar-item" href="put the link here" target="_blank">
+                        <a class="navbar-item" href="#">
                             comming soon
                         </a>
                     </div>
@@ -118,7 +118,7 @@
                 <a class="navbar-item" href="https://discord.com/invite/U3u5EyrgTD" target="_blank">
                     Support
                 </a>
-                <a class="navbar-item" href="discord" target="_blank">
+                <a class="navbar-item" href="discord">
                     ChatBox
                 </a>
 
