--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                             </h2><span class="faq-t"></span>
                         </div>
                         <p class="answer"> You can get more information on this page: <a
-                                href="https://popcord.github.io/privacy">popcord.github.io/privacy</a></p>
+                                href="/privacy">popcord.github.io/privacy</a></p>
                     </div>
                     <!-- question end -->
                     <!-- question start -->
