--- a/discord.html
+++ b/discord.html
@@ -63,7 +63,7 @@
                 href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=8796093022207&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=applications.commands%20bot" target="_blank">
                 <img src="img/discord.png" width="30px" height="55px">
             </a>
-            <p style="background-color:black; border-radius:10%" class="navbar-item"><a href="https://api-popcord.vercel.app" style="color:white" class="fa-solid fa-code" target="_blank"> API</a>
+            <p style="background-color:black; border-radius:10%" class="navbar-item"><a href="" style="color:white" class="fa-solid fa-code" target="_blank"> API</a>
             </p>
 
             <a role="button" class="navbar-burger" data-target="navbarBasicExample" aria-label="menu"
