--- a/commands.html
+++ b/commands.html
@@ -232,9 +232,65 @@
                 { name: `${prefix}rule34 [query]`, category: 'nsfw', description: 'send you a random rule34 pic' },
 
 
+{ name: `${prefix}hug`, category: 'social', description: 'Hug the bot or mentioned user.' },
+{ name: `${prefix}kiss`, category: 'social', description: 'Kiss the bot or mentioned user.' },
+{ name: `${prefix}slap`, category: 'social', description: 'Slap the bot or mentioned user.' },
+{ name: `${prefix}pat`, category: 'social', description: 'Pat the bot or mentioned user.' },
+{ name: `${prefix}kill`, category: 'social', description: 'Kill the bot or mentioned user.' },
+{ name: `${prefix}baka`, category: 'social', description: 'You baka.' },
+{ name: `${prefix}confused`, category: 'social', description: 'Show how you are confused.' },
+{ name: `${prefix}cry`, category: 'social', description: 'Cry alone or to someone.' },
+{ name: `${prefix}cuddle`, category: 'social', description: 'Cuddle and comforts a user.' },
+{ name: `${prefix}dance`, category: 'social', description: 'Dance alone or with someone.' },
+{ name: `${prefix}feed`, category: 'social', description: 'Feed the bot or mentioned user.' },
+{ name: `${prefix}laugh`, category: 'social', description: 'Laugh at the bot or mentioned user.' },
+{ name: `${prefix}lick`, category: 'social', description: 'Lick the bot or mentioned user.' },
+{ name: `${prefix}love`, category: 'social', description: 'Love the bot or mentioned user.' },
+{ name: `${prefix}poke`, category: 'social', description: 'Poke someone.' },
+{ name: `${prefix}pout`, category: 'social', description: 'Pouts the bot or mentioned user.' },
+{ name: `${prefix}punch`, category: 'social', description: 'Punch someone or the bot.' },
+{ name: `${prefix}shocked`, category: 'social', description: 'Show how shocked you are.' },
+{ name: `${prefix}smug`, category: 'social', description: 'Smug to someone.' },
+{ name: `${prefix}tickle`, category: 'social', description: 'Tickles the bot or mentioned user.' },
+{ name: `${prefix}wasted`, category: 'social', description: 'Wasted yourself or someone.' },
 
 
 
+
+
+                { name: `${prefix}invite`, category: 'utility', description: 'Invite the bot to your server.' },
+{ name: `${prefix}stats`, category: 'utility', description: 'Show in how many servers the bot is.' },
+{ name: `${prefix}ping`, category: 'utility', description: 'Check the bot\'s ping on the Discord server.' },
+{ name: `${prefix}serverinfo`, category: 'utility', description: 'Show server information.' },
+{ name: `${prefix}userinfo [user/id]`, category: 'utility', description: 'Show user information.' },
+{ name: `${prefix}clear_dm`, category: 'utility', description: 'Clear all bot messages in your DM.' },
+{ name: `/bugs`, category: 'utility', description: 'Report a bug to the developer **NEW**' },
+
+
+
+
+
+
+                { name: `${prefix}say [text]`, category: 'fun', description: 'Repeat what you say.' },
+{ name: `${prefix}avatar [user/id]`, category: 'fun', description: 'Get a user\'s avatar.' },
+{ name: `${prefix}wallpaper`, category: 'fun', description: 'Show a random wallpaper just for you <3.' },
+{ name: `${prefix}meme`, category: 'fun', description: 'Send a random meme for fun!' },
+{ name: `${prefix}slot`, category: 'fun', description: 'Play the wheel of fortune!' },
+{ name: `${prefix}heatrate [user/id]`, category: 'fun', description: 'Look at the heat rate between two users.' },
+{ name: `${prefix}gayrate [user/id]`, category: 'fun', description: 'Look at the gay rate of a user.' },
+{ name: `${prefix}big[emoji]`, category: 'fun', description: 'Enlarge emojis (only custom emojis).' },
+
+
+
+{ name: `${prefix}tiktoktoggle`, category: 'utility', description: 'Set auto-convert TikTok link to videos.' },
+{ name: `${prefix}redgifstoggle`, category: 'nsfw', description: 'Set auto-convert Redgifs link to videos (only in NSFW channel).' },
+{ name: `${prefix}tiktok-dl` or `${prefix}tdl`, category: 'utility', description: 'Convert a TikTok video link to a video file.' },
+{ name: `${prefix}redgifs-dl` or `${prefix}rdl`, category: 'nsfw', description: 'Convert a Redgifs video link to a video file. **NSFW**' },
+
+
+                
+
+                
                 { name: `${prefix}ban [@user] or [id] `, category: 'admin', description: ' ban the user from the server' },
                 { name: `${prefix}unban [id]`, category: 'admin', description: 'unban the user with id from the server' },
                 { name: `${prefix}kick [@user] or [id] `, category: 'admin', description: 'kick user from the server' },
