--- a/commands.html
+++ b/commands.html
@@ -172,16 +172,20 @@
                 </svg>
             </div>
 
-
+<details class="commands">
+                <summary>social</summary>
+                <hr>
+                <div class="commands-social></div>
+</details>
             <details class="commands">
                 <summary>NSFW</summary>
                 <hr>
                 <div class="commands-nsfw"></div>
             </details>
             <details class="commands">
-                <summary>info</summary>
+                <summary>information</summary>
                 <hr>
-                <div class="commands-info"></div>
+                <div class="commands-information"></div>
             </details>
             <details class="commands">
                 <summary>admin</summary>
