--- a/commands.html
+++ b/commands.html
@@ -173,9 +173,9 @@
             </div>
 
 <details class="commands">
-                <summary>social</summary>
+                <summary>Social</summary>
                 <hr>
-                <div class="commands-social></div>
+                <div class="commands-sociam"></div>
 </details>
             <details class="commands">
                 <summary>NSFW</summary>
@@ -183,9 +183,9 @@
                 <div class="commands-nsfw"></div>
             </details>
             <details class="commands">
-                <summary>information</summary>
+                <summary>utility</summary>
                 <hr>
-                <div class="commands-information"></div>
+                <div class="commands-utility"></div>
             </details>
             <details class="commands">
                 <summary>admin</summary>
@@ -286,10 +286,10 @@
 
 
 
-{ name: `${prefix}tiktoktoggle`, category: 'utility', description: 'Set auto-convert TikTok link to videos.' },
-{ name: `${prefix}redgifstoggle`, category: 'nsfw', description: 'Set auto-convert Redgifs link to videos (only in NSFW channel).' },
-{ name: `${prefix}tiktok-dl` or `${prefix}tdl`, category: 'utility', description: 'Convert a TikTok video link to a video file.' },
-{ name: `${prefix}redgifs-dl` or `${prefix}rdl`, category: 'nsfw', description: 'Convert a Redgifs video link to a video file. **NSFW**' },
+{ name: `${prefix}tiktoktoggle`, category: 'downloader', description: 'Set auto-convert TikTok link to videos.' },
+{ name: `${prefix}redgifstoggle`, category: 'downloader', description: 'Set auto-convert Redgifs link to videos (only in NSFW channel).' },
+{ name: `${prefix}tiktok-dl` or `${prefix}tdl`, category: 'downloader, description: 'Convert a TikTok video link to a video file.' },
+{ name: `${prefix}redgifs-dl` or `${prefix}rdl`, category: 'downloader', description: 'Convert a Redgifs video link to a video file. **NSFW**' },
 
 
                 
