--- a/commands.html
+++ b/commands.html
@@ -288,8 +288,8 @@
 
 { name: `${prefix}tiktoktoggle`, category: 'downloader', description: 'Set auto-convert TikTok link to videos.' },
 { name: `${prefix}redgifstoggle`, category: 'downloader', description: 'Set auto-convert Redgifs link to videos (only in NSFW channel).' },
-{ name: `${prefix}tiktok-dl` or `${prefix}tdl`, category: 'downloader, description: 'Convert a TikTok video link to a video file.' },
-{ name: `${prefix}redgifs-dl` or `${prefix}rdl`, category: 'downloader', description: 'Convert a Redgifs video link to a video file. **NSFW**' },
+{ name: `${prefix}tiktok-dl or ${prefix}tdl`, category: 'downloader', description: 'Convert a TikTok video link to a video file.' },
+{ name: `${prefix}redgifs-dl or ${prefix}rdl`, category: 'downloader', description: 'Convert a Redgifs video link to a video file. **NSFW**' },
 
 
                 
