--- a/commands.html
+++ b/commands.html
@@ -175,7 +175,7 @@
 <details class="commands">
                 <summary>Social</summary>
                 <hr>
-                <div class="commands-sociam"></div>
+                <div class="commands-social"></div>
 </details>
             <details class="commands">
                 <summary>NSFW</summary>
@@ -188,7 +188,7 @@
                 <div class="commands-utility"></div>
             </details>
             <details class="commands">
-                <summary>admin</summary>
+                <summary>Admin</summary>
                 <hr>
                 <div class="commands-admin"></div>
             </details>
