--- a/commands.html
+++ b/commands.html
@@ -192,6 +192,11 @@
                 <hr>
                 <div class="commands-admin"></div>
             </details>
+                        <details class="commands">
+                <summary>Downloader</summary>
+                <hr>
+                <div class="commands-downloader"></div>
+                        </details>
             <br>
         </div>
 
