--- a/commands.html
+++ b/commands.html
@@ -172,16 +172,12 @@
                 </svg>
             </div>
 
-<details class="commands">
+            <details class="commands">
                 <summary>Social</summary>
                 <hr>
                 <div class="commands-social"></div>
-</details>
-            <details class="commands">
-                <summary>NSFW</summary>
-                <hr>
-                <div class="commands-nsfw"></div>
             </details>
+            
             <details class="commands">
                 <summary>utility</summary>
                 <hr>
@@ -192,11 +188,16 @@
                 <hr>
                 <div class="commands-admin"></div>
             </details>
-                        <details class="commands">
+            <details class="commands">
+                <summary>NSFW</summary>
+                <hr>
+                <div class="commands-nsfw"></div>
+            </details>
+            <details class="commands">
                 <summary>Downloader</summary>
                 <hr>
                 <div class="commands-downloader"></div>
-                        </details>
+            </details>
             <br>
         </div>
 
@@ -281,7 +282,7 @@
 
 
                 { name: `${prefix}say [text]`, category: 'fun', description: 'Repeat what you say.' },
-{ name: `${prefix}avatar [user/id]`, category: 'fun', description: 'Get a user\'s avatar.' },
+{ name: `${prefix}avatar [user/id]`, category: 'fun', description: 'Get a user avatar.' },
 { name: `${prefix}wallpaper`, category: 'fun', description: 'Show a random wallpaper just for you <3.' },
 { name: `${prefix}meme`, category: 'fun', description: 'Send a random meme for fun!' },
 { name: `${prefix}slot`, category: 'fun', description: 'Play the wheel of fortune!' },
