--- a/commands.html
+++ b/commands.html
@@ -189,6 +189,11 @@
                 <div class="commands-admin"></div>
             </details>
             <details class="commands">
+                <summary>Fun</summary>
+                <hr>
+                <div class="commands-fun"></div>
+            </details>
+            <details class="commands">
                 <summary>NSFW</summary>
                 <hr>
                 <div class="commands-nsfw"></div>
