--- a/privacy.html
+++ b/privacy.html
@@ -150,16 +150,11 @@
             <br>
             <p>The bot may store the following information automatically when being invited to a new Discord Server:</p>
             <ul>
-                <li><code>id</code> with the Server's ID and member's ID as value.</li>
-                <li><code>prefix</code> with value <code>p!</code></li>
-                <li><code>welcome_channel</code> with value <code>none</code></li>
-                <li><code>welcome_color</code> with value <code>hex:32dc32</code></li>
-                <li><code>welcome_icon</code> with value <code>member_icon</code></li>
-                <li><code>welcome_message</code> with values <code>member.name</code>, <code>guild.name</code>,
-                    <code>guild.member_count</code>
-                </li>
+                <li><code>user id</code> for premium members</li>
+                <li><code>guild id</code> for the prefix, welcome message, </li>
+                <li><code>prefix</code> with default value as <code>p!</code></li>
                 <br>
-                <p>No other information outside of the above mentioned one will be stored.</p>
+                <p>all datas are deletee when the bot leave a server.<br>No other information outside of the above mentioned one will be stored.</p>
             </ul>
         </div>
 
