--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                         <a class="navbar-item" href="https://wonderbotlist.com/fr/bot/994970912271122452/vote" target="_blank">
                             wonderbotlist
                         </a>
-                        <a class="navbar-item" href="#">
-                            comming soon
+                        <a class="navbar-item" href="https://topbotlist.xyz/bot/994970912271122452">
+                            topbotlist
                         </a>
                     </div>
 
